# aynime_comp_eval

./: .gitignore  README.md  agents.md  pyproject.toml
scripts/: run_sweep.ps1
src/discord_webp_tuner/: cli.py  config.py  io.py  metrics.py  pipeline.py  plot.py  plot_interactive.py
tests/: conftest.py  test_cwebp.py  test_io.py  test_metrics.py  test_pillow_webp.py  test_plot.py
